Finish world loading functionality